--- a/about.html
+++ b/about.html
@@ -124,9 +124,9 @@ p{
 </style>
 <body>
     <div class="header">
-        <a href="index.php" class="logo">BNSHS GradHelper</a>
+        <a href="index.html" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
-            <a href="index.php">Home</a>
+            <a href="index.html">Home</a>
             <a href="profile.php">Profile</a>
             <a href="reviewers.html">Reviewers</a>
             <a class="active">About Us</a>
