--- a/reviewers.html
+++ b/reviewers.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-color: #000;
-            color: #f9004d;
+            color: #161616;
 
             height: 100vh;
             margin: 0;
