--- a/reviewers.html
+++ b/reviewers.html
@@ -144,7 +144,7 @@ h2{
     <div class="header">
         <a href="index.php" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
-            <a href="index.php">Home</a>
+            <a href="index.html">Home</a>
             <a class="active" href="active">Reviewers</a>
             <a href="about.html">About Us</a>
         </div>
