--- a/reviewers.html
+++ b/reviewers.html
@@ -22,6 +22,7 @@
             margin: 5%;
             border: 1px solid maroon;
             margin-bottom: 5%;
+            color: #161616;
         }
         .pdf-box::-webkit-scrollbar{
           width: 0;
