--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
                  <h1 id="2h1">University of the Philippines</h1>
                  <h2 id="2h2" class="school">University of the Philippines</h2>
                 <div class="content">
-                <p id="2p">The University of the Philippines (UP) is the country’s national university. 
-                    This premier institution of higher learning was established in 1908 and is 
-                    now a university system composed of eight constituent universities located in 17 campuses all over the archipelago.
-                    As of 2020, the Commission on Higher Education has declared 41 units of the university as Centers of Excellence; 
-                    while 5 units have been declared as Centers of Development.<br><br><br>Click for more info!</p>
+                <p id="2p">Welcome to the University of the Philippines (UP), a prestigious institution recognized for its academic excellence, rich history, and commitment to nation-building. With its diverse campuses nationwide, UP offers a wide range of undergraduate, graduate, and professional programs across disciplines, fostering an environment of intellectual growth, innovation, and social engagement. Beyond the classroom, UP encourages critical thinking, research, and community involvement, shaping socially responsible and globally engaged individuals. With world-class faculty, state-of-the-art facilities, and a vibrant campus life, UP provides an empowering environment to pursue groundbreaking research, make a difference, and explore your passions. Join us at the University of the Philippines, where excellence and service to the nation converge.</p>
                 
                 </div>
         </div>
