--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
                  <h1 id="1h1">De La Salle University</h1>
                  <h2 id="1h2" class="school">De La Salle University</h2>
                     <div class="content">
-                    <p id="1p"><br>De La Salle University positions itself as a leader
-                    in molding human resources who serve the church and the nation. 
-                    It is a Catholic coeducational institution founded in 1911 by the Brothers of the Christian Schools. 
-                    The University is a hub for higher education training renowned for its academic excellence, prolific 
-                    and relevant research, and involved community service.
-                    <br><br><br><br>Click for more info!</p>
+                    <p id="1p"><br>
+Welcome to De La Salle University (DLSU), a distinguished institution known for its academic excellence, transformative education, and commitment to holistic development. Established in 1911, DLSU has been at the forefront of providing quality education in the Philippines, empowering students to become competent, compassionate, and globally competitive individuals. With a dynamic learning environment and state-of-the-art facilities, DLSU offers a wide range of undergraduate, graduate, and professional programs across various disciplines, ensuring that students receive a well-rounded education that combines theoretical knowledge with practical application. At DLSU, students are encouraged to think critically, engage in research, and actively contribute to their communities, fostering a sense of social responsibility and ethical leadership. With a vibrant campus life, diverse student organizations, and a supportive community, DLSU provides a nurturing space for personal growth, character formation, and the pursuit of excellence. Join us at De La Salle University, where academic excellence and Lasallian values unite to shape the leaders of tomorrow.</p>
                     </div>
             </div>
          </a>
