--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
          <h1 id="3h1">University of Santo Thomas</h1>
          <h2 id="3h2"class="school">University of Santo Thomas</h2>
             <div class="content">
-            <p id="3p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p id="3p">The University of Santo Tomas (UST) is a prestigious institution deeply rooted in Philippine history and culture. Founded in 1611, UST holds the distinction of being the oldest existing university in Asia. It has evolved into a comprehensive university system with campuses and colleges spread across different regions of the country. UST takes pride in its diverse academic programs and the recognition it has received from the Commission on Higher Education. With numerous Centers of Excellence and Centers of Development, UST is committed to providing quality education, fostering research, and shaping future leaders in various fields.</p>
             </div>
     </div>
     </a>
@@ -79,11 +79,7 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
              <h1 id="4h1">Ateneo de Manila University</h1>
              <h2 id="4h2" class="school">Ateneo de Manila University</h2>
                 <div class="content">
-                <p id="4p">Ateneo's Motto, "Lux in Domino".<br>
-                    To be "light in the Lord" in all fullness demands moving insistently and deliberately towards God 
-                    as the center of a person's life, identifying the issues that such a centering poses, and then 
-                    moving out to the world to find ever new ways of constructing the edifice, cultivating the garden, 
-                    painting the masterpiece, that God is unfolding in one's life.<br><br><br><br>Click for more info!</p>                
+                <p id="4p">Ateneo de Manila University (ADMU) stands as a beacon of academic excellence and Ignatian values in the Philippines. Founded in 1859, ADMU has been at the forefront of providing holistic education that integrates intellectual rigor, social awareness, and spiritual formation. With a wide range of undergraduate and graduate programs across various disciplines, ADMU fosters a culture of critical thinking, creativity, and ethical leadership. The university's commitment to academic excellence has garnered recognition from various accrediting bodies, affirming its position as one of the country's premier educational institutions. At ADMU, students are empowered to become men and women for others, equipped to make a positive impact in society through their knowledge, skills, and values.<br><br><br><br>Click for more info!</p>                
                 </div>
         </div>
         </a>
@@ -94,10 +90,7 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
          <h1 id="5h1">Polytechnic University of the Philippines</h1>
          <h2 id="5h2" class="school">Polytechnic University of the Philippines</h2>
             <div class="content">
-            <p id="5p">The Polytechnic University of the Philippines (PUP) is a government educational institution governed by 
-                Republic Act Number 8292.
-                PUP is one of the country's highly competent educational institutions. The PUP Community is composed of the Board of Regents, 
-                University Officials, Administrative and Academic Personnel, Students, various Organizations, and the Alumni.<br><br><br> Click for more info!</p=>
+            <p id="5p">Polytechnic University of the Philippines (PUP) has been a trailblazer in technical and professional education in the Philippines. With a history spanning over [years], PUP has consistently upheld its mission of providing accessible and quality education to a diverse student population. PUP offers a wide array of programs that focus on applied knowledge and skills development, ensuring graduates are industry-ready and equipped to thrive in their chosen fields. As a public university, PUP is committed to serving the needs of the nation and the community, producing graduates who are not only competent professionals but also socially aware and engaged citizens.<br><br><br> Click for more info!</p=>
             </div>
         </div>
         </a>
@@ -108,10 +101,7 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
          <h1 id="6h1">Our Lady of Fatima University</h1>
          <h2 id="6h2"class="school">Our Lady of Fatima University</h2>
             <div class="content">
-            <p id="6p">Our Lady of Fatima University has become one of the most respected and admired educational institutions in the country today both 
-                in the field of paramedical such as Medicine, Pharmacy, Dentistry and other non-paramedical programs such as Hotel Restaurant 
-                Management and Maritime Education. And after more than four decades os serious and dedicated quest for excellent and quality 
-                education, OLFU continuously produces more and more graduates who excel in their field.<br><br>Click for more info!</p>
+            <p id="6p">Our Lady of Fatima University (OLFU) is a dynamic institution dedicated to providing quality education and healthcare programs. With campuses strategically located in Valenzuela City, Quezon City, Antipolo City, and Pampanga, OLFU offers a diverse range of academic programs that prepare students for successful careers in healthcare, business, education, and other fields. The university's commitment to excellence in health sciences education is demonstrated by its modern facilities, state-of-the-art laboratories, and partnerships with renowned medical institutions. OLFU's faculty, composed of experienced practitioners and industry experts, ensures that students receive comprehensive training and practical skills development. With a focus on compassionate and competent healthcare professionals, OLFU prepares graduates to make a meaningful contribution to society and improve the well-being of individuals and communities.<br><br>Click for more info!</p>
             </div>
         </div>
         </a>
@@ -119,10 +109,10 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
    <div class="box">
         <a id="div7" class="info" href="info/usl_content.html">
         <div class="card school-box" id="usl">
-         <h1 id="8h1">University of Saint Louis</h1>
-         <h2 id="8h2" class="school">University of Saint Louis</h2>
+         <h1 id="7h1">University of Saint Louis</h1>
+         <h2 id="7h2" class="school">University of Saint Louis</h2>
             <div class="content">
-            <p id="8p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p id="7p">Saint Louis University (SLU) in Tuguegarao City has been a pillar of academic excellence in the Cagayan Valley region. With its foundation rooted in the ideals of the Congregation of the Immaculate Heart of Mary (CICM), SLU is dedicated to providing a transformative education that integrates faith, service, and excellence. The university offers a wide range of programs across various disciplines, empowering students to become well-rounded individuals prepared for the challenges of the modern world. Through its commitment to research, innovation, and community engagement, SLU equips students with the knowledge and values needed to make meaningful contributions to society.</p>
             </div>
         </div>
         </a>
@@ -130,10 +120,10 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
     <div class="box">
         <a id="div8" class="info" href="info/bsc_content.html">
         <div class="card school-box" id="bsc">
-         <h1 id="9h1">Batanes State College</h1>
-         <h2 id="9h2" class="school">Batanes State College</h2>
+         <h1 id="8h1">Batanes State College</h1>
+         <h2 id="8h2" class="school">Batanes State College</h2>
             <div class="content">
-            <p id="9p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <p id="8p">Batanes State College (BaSCO) is a beacon of education nestled in the breathtaking province of Batanes in the Philippines. As a state college, BaSCO is committed to providing accessible and quality education to the residents of Batanes and beyond. With a range of undergraduate degree programs, BaSCO equips students with the knowledge, skills, and values necessary for their chosen fields. The college's faculty members, known for their expertise and dedication, guide students on their educational journey, fostering critical thinking and a passion for learning. BaSCO's strong emphasis on research and community engagement empowers students to make meaningful contributions to the development of Batanes and the wider society. By offering a transformative educational experience in a captivating setting, BaSCO ensures that its graduates are equipped to excel in their careers and contribute to the growth and progress of their communities.</p>
             </div>
         </div>
         </a>
@@ -141,10 +131,10 @@ Welcome to De La Salle University (DLSU), a distinguished institution known for 
     <div class="box">
         <a id="div9"class="info" href="info/csu_content.html">
         <div class="card school-box" id="csu">
-             <h1 id="10h1">Cagayan State University</h1>
-             <h2 id="10h2" class="school">Cagayan State University</h2>
+             <h1 id="9h1">Cagayan State University</h1>
+             <h2 id="9h2" class="school">Cagayan State University</h2>
                 <div class="content">
-                <p id="10p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                <p id="9p">Cagayan State University (CSU) stands as a beacon of education in the Cagayan Valley region. Founded in [year], CSU has consistently provided quality education and community service. With its diverse range of academic programs, CSU offers students the opportunity to pursue their passions and develop the necessary skills for their chosen fields. The university's commitment to excellence has led to the recognition of several programs as Centers of Excellence and Centers of Development by the Commission on Higher Education. At CSU, students are nurtured to become competent professionals, socially responsible individuals, and catalysts for positive change in their communities.</p>
                 </div>
         </div>
         </a>
