--- a/reviewers.html
+++ b/reviewers.html
@@ -148,7 +148,7 @@ h2{
     </div>
 
     <div class="pdf-box">
-      <h1>List of Reviewers</h1>
+      <h1>List of Reviewers</h1><p>(click to download</p>
 
       <div class="list">
         <h2>UPCAT Questionnaires</h2>
