--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
     <div class="header">
-        <a href="index.php" class="logo">BNSHS GradHelper</a>
+        <a href="index.html" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
           <a class="active" href="#home">Home</a>
           <a href="reviewers.html">Reviewers</a>
@@ -17,9 +17,16 @@
         </div>
       </div>
     <!-- Start of Body-->
-    <div class="greetings">
-    
-</div>
+<style>
+    .animate {
+  animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+</style>
 
 <div class="choice">
     <h2>Choose your preferred course:
@@ -37,7 +44,7 @@
 
 <div class="services snaps-inline">
 
-        <div class="box">
+        <div class="box animate">
             <a id="div1" class="info" href="info/dlsu_content.html"> 
                 <div class="card school-box" id="dlsu">
                  <h1 id="1h1">De La Salle University</h1>
@@ -48,7 +55,7 @@ De La Salle University positions itself as a leader in molding human resources w
             </div>
          </a>
        </div>
-       <div class="box">
+       <div class="box animate">
            <a id="div2" class="info" href="info/up_content.html">
                 <div class="card school-box" id="up">
                  <h1 id="2h1">University of the Philippines</h1>
@@ -60,7 +67,7 @@ De La Salle University positions itself as a leader in molding human resources w
         </div>
         </a>
    </div>
-   <div class="box">
+   <div class="box animate">
     <a id="div3" class="info" href="info/ust_content.html">
     <div class="card school-box" id="ust">
          <h1 id="3h1">University of Santo Thomas</h1>
@@ -72,7 +79,7 @@ De La Salle University positions itself as a leader in molding human resources w
     </a>
     </div>
          
-    <div class="box">
+    <div class="box animate">
         <a id ="div4" class="info" href="info/admu_content.html">
         <div class="card school-box" id="admu">
              <h1 id="4h1">Ateneo de Manila University</h1>
@@ -83,7 +90,7 @@ De La Salle University positions itself as a leader in molding human resources w
         </div>
         </a>
    </div>
-   <div class="box">
+   <div class="box animate">
         <a id="div5" class="info" href="info/pup_content.html">
         <div class="card school-box" id="pup">
          <h1 id="5h1">Polytechnic University of the Philippines</h1>
@@ -94,7 +101,7 @@ De La Salle University positions itself as a leader in molding human resources w
         </div>
         </a>
 </div>
-    <div class="box">
+    <div class="box animate">
         <a id="div6" class="info" href="info/olfu_contetnt.,html">
         <div class="card school-box" id="olfu">
          <h1 id="6h1">Our Lady of Fatima University</h1>
@@ -105,7 +112,7 @@ De La Salle University positions itself as a leader in molding human resources w
         </div>
         </a>
    </div>
-   <div class="box">
+   <div class="box animate">
         <a id="div7" class="info" href="info/usl_content.html">
         <div class="card school-box" id="usl">
          <h1 id="7h1">University of Saint Louis</h1>
@@ -116,7 +123,7 @@ De La Salle University positions itself as a leader in molding human resources w
         </div>
         </a>
     </div>
-    <div class="box">
+    <div class="box animate">
         <a id="div8" class="info" href="info/bsc_content.html">
         <div class="card school-box" id="bsc">
          <h1 id="8h1">Batanes State College</h1>
@@ -127,7 +134,7 @@ De La Salle University positions itself as a leader in molding human resources w
         </div>
         </a>
     </div>
-    <div class="box">
+    <div class="box animate">
         <a id="div9"class="info" href="info/csu_content.html">
         <div class="card school-box" id="csu">
              <h1 id="9h1">Cagayan State University</h1>
@@ -212,7 +219,7 @@ function changeOrder() {
     document.getElementById('dlsu').style.backgroundImage = 'linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/up/up.jpg")';
     h11.textContent = 'University of The Philippines';
     h21.textContent = 'University of The Philippines';
-    p1.textContent = 'The University of the Philippines (UP) is the country’s national university. This premier institution of higher learning was established in 1908 and is now a university system composed of eight constituent universities located in 17 campuses all over the archipelago. As of 2020, the Commission on Higher Education has declared 41 units of the university as Centers of Excellence; while 5 units have been declared as Centers of Development.'+'Click for more info!';
+    p1.textContent = 'The University of the Philippines (UP) is the country`s national university. This premier institution of higher learning was established in 1908 and is now a university system composed of eight constituent universities located in 17 campuses all over the archipelago. As of 2020, the Commission on Higher Education has declared 41 units of the university as Centers of Excellence; while 5 units have been declared as Centers of Development.'+'Click for more info!';
    
     //Second Div
     document.getElementById('up').style.backgroundImage = 'linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/admu/admu.jpeg")';
@@ -253,7 +260,7 @@ function changeOrder() {
     document.getElementById('csu').style.backgroundImage = 'linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/olfu/olfu.jpg")';
     h19.textContent = 'Our Lady of Fatima University';
     h29.textContent = 'Our Lady of Fatima University';
-    p9.textContent = 'Our Lady of Fatima University (OLFU) is a dynamic institution dedicated to providing quality education and healthcare programs. With campuses strategically located in Valenzuela City, Quezon City, Antipolo City, and Pampanga, OLFU offers a diverse range of academic programs that prepare students for successful careers in healthcare, business, education, and other fields. The university's commitment to excellence in health sciences education is demonstrated by its modern facilities, state-of-the-art laboratories, and partnerships with renowned medical institutions. OLFU's faculty, composed of experienced practitioners and industry experts, ensures that students receive comprehensive training and practical skills development. With a focus on compassionate and competent healthcare professionals, OLFU prepares graduates to make a meaningful contribution to society and improve the well-being of individuals and communities.';
+    p9.textContent = 'Our Lady of Fatima University (OLFU) is a dynamic institution dedicated to providing quality education and healthcare programs. With campuses strategically located in Valenzuela City, Quezon City, Antipolo City, and Pampanga, OLFU offers a diverse range of academic programs that prepare students for successful careers in healthcare, business, education, and other fields. The university\'s commitment to excellence in health sciences education is demonstrated by its modern facilities, state-of-the-art laboratories, and partnerships with renowned medical institutions. OLFU\'s faculty, composed of experienced practitioners and industry experts, ensures that students receive comprehensive training and practical skills development. With a focus on compassionate and competent healthcare professionals, OLFU prepares graduates to make a meaningful contribution to society and improve the well-being of individuals and communities.';
   
    break;
 
