--- a/reviewers.html
+++ b/reviewers.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
     <meta charset="UTF-8">
-    <title>PDF List</title>
+    <title>GradHelper Reviewers</title>
     <style>
         body {
             background-color: #161616;
