--- a/about.html
+++ b/about.html
@@ -130,6 +130,7 @@ p{
         <a href="index.html" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
             <a href="index.html">Home</a>
+            <a href="scholarships.html">Scholarships</a>
             <a href="reviewers.html">Reviewers</a>
             <a class="active">About Us</a>
         </div>
