--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="index.html" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
           <a class="active" href="#home">Home</a>
+            <a href="scholarship.html">Scholarships</a>
           <a href="reviewers.html">Reviewers</a>
           <a href="about.html">About Us</a>
         </div>
