--- a/reviewers.html
+++ b/reviewers.html
@@ -143,6 +143,7 @@ h2{
         <a href="index.php" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
             <a href="index.html">Home</a>
+            <a href="scholarship.html">Scholarships</a>
             <a class="active" href="active">Reviewers</a>
             <a href="about.html">About Us</a>
         </div>
