--- a/scholarships.html
+++ b/scholarships.html
@@ -163,7 +163,7 @@ p{
       <h1>List of scholarships-and-grants</h1>
 
       <div class="list">
-        <a href="https://www.sei.dost.gov.ph/index.php/programs-and-projects/scholarships/undergraduate-scholarships" target="_blank"><h2>DOST Scholarships</h2></a>
+        <a href="https://www.sei.dost.gov.ph/index.php/programs-and-projects/scholarships/undergraduate-scholarships" target="_blank"><h2>CHED Scholarships</h2></a>
         <ul class="pdf-list">
             <h2>Pros:</h2>
                 <span><p>School Tuition and other Expenses – DOST scholarship is offering P10, 000 or P8, 000 per semester.</p>
@@ -181,7 +181,6 @@ p{
                     <p>Limited Slots</p>
                     <p>You must serve your country for several years</p>
                     <p>Must have maintaining grades</p>
-                    <p>Limited to S&T Courses</p>
                     <p>Must choose college with center of excellency award</p>
             </span> 
         </ul>
