--- a/scholarships.html
+++ b/scholarships.html
@@ -152,8 +152,8 @@ p{
         <a href="index.html" class="logo">BNSHS GradHelper</a>
         <div class="header-right" id="myLinks">
             <a href="index.html">Home</a>
-            <a href="reviewers.html">Reviewers</a>
-            <a class="active" href="active">Reviewers</a>
+            <a class="active" href="reviewers.html">Scholarships</a>
+            <a href="active">Reviewers</a>
             <a href="about.html">About Us</a>
             <a href="logout.php">Logout</a>
         </div>
