--- a/scholarships.html
+++ b/scholarships.html
@@ -153,10 +153,9 @@ p{
         <div class="header-right" id="myLinks">
             <a href="index.html">Home</a>
             <a class="active" href="reviewers.html">Scholarships</a>
-            <a href="active">Reviewers</a>
-            <a href="about.html">About Us</a>
-            <a href="logout.php">Logout</a>
-        </div>
+            <a href="reviewers.html">Reviewers</a>
+          <a href="about.html">About</a>
+          </div>
     </div>
 
     <div class="pdf-box">
